...
      children: [
        Row(
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
          children: [
            Text(context.translate.breed),
            DropdownButton(
              key: const ValueKey('breedDropDown'),
              items: widget.breeds.map((breed) {
                return DropdownMenuItem(
                  value: breed,
                  child: Text(toBeginningOfSentenceCase(breed.name) ?? breed.name),
                );
              }).toList(),
...
